--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -982,21 +982,14 @@ jobs:
             sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" ~/magma-experimental/files/secrets.yaml
             sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" ~/magma-experimental/files/secrets.yaml
             cp ~/magma-experimental/ansible.cfg ~/.ansible.cfg
-            aws s3 cp https://lte-agw-aws.s3-us-west-1.amazonaws.com/agwmpboot2.pem ~/magma-experimental/files/agwmpboot2.pem
-            chmod 600 ~/magma-experimental/files/agwmpboot2.pem
-            sed -i -e "s/agwmpHost1/agwmphost2/g" ~/magma-experimental/roles/vars/defaults.yaml
-            aws s3 cp https://lte-agw-aws.s3-us-west-1.amazonaws.com/agwmpboot2.pem ~/magma-experimental/files/agwmphost2.pem
-            chmod 700 ~/magma-experimental/files/agwmphost2.pem
+            aws s3 cp s3://cloudstrapper-ec2-pems/* ~/magma-experimental/files/
+            chmod 600 ~/magma-experimental/files/agwmp*2.pem
             #ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" --tags keyCreate
             ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files"
             ansible-playbook devops-provision.yaml -e "dirLocalInventory=~/magma-experimental/files"
-            #ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=~/magma-experimental/files" -u ubuntu --skip-tags buildMagma,pubMagma,helm
-            #ansible-playbook cloudstrapper-provision.yaml  -e "dirLocalInventory=~/magma-experimental/files"
-            #ansible-playbook agw-provision.yaml -e "idSite=MenloPark" -e "idGw=AgwA" --tags createNet,createGw,attachIface
-            #ansible-playbook agw-provision.yaml -e "idSite=MenloPark" -e "idGw=AgwB" --tags createGw,attachIface
-            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
-            ansible-playbook build-provision.yaml --tags devopsAgw,inventory -e "dirLocalInventory=~/magma-experimental/files"
-            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"  -e "dirLocalInventory=~/magma-experimental/files"
+            ansible-playbook cloudstrapper-provision.yaml  -e "dirLocalInventory=~/magma-experimental/files"
+            ansible-playbook cloudstrapper-provision.yaml  -e "dirLocalInventory=~/magma-experimental/files"
+            ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=~/magma-experimental/files" -u ubuntu --skip-tags buildMagma,pubMagma,helm
             ansible-playbook ami-init.yaml
 #      - magma_slack_notify
 
