--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -982,7 +982,8 @@ jobs:
             sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" ~/magma-experimental/files/secrets.yaml
             sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" ~/magma-experimental/files/secrets.yaml
             cp ~/magma-experimental/ansible.cfg ~/.ansible.cfg
-            aws s3 cp s3://cloudstrapper-ec2-pems/* ~/magma-experimental/files/
+            aws s3 cp s3://cloudstrapper-ec2-pems/agwmpboot2.pem ~/magma-experimental/files/
+            aws s3 cp s3://cloudstrapper-ec2-pems/agwmphost2.pem ~/magma-experimental/files/
             chmod 600 ~/magma-experimental/files/agwmp*2.pem
             #ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" --tags keyCreate
             ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files"
