--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -986,12 +986,12 @@ jobs:
             aws s3 cp s3://cloudstrapper-ec2-pems/agwmphost2.pem ~/magma-experimental/files/
             chmod 600 ~/magma-experimental/files/agwmp*2.pem
             #ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" --tags keyCreate
-            ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files"
-            ansible-playbook devops-provision.yaml -e "dirLocalInventory=~/magma-experimental/files"
-            ansible-playbook cloudstrapper-provision.yaml  -e "dirLocalInventory=~/magma-experimental/files"
-            ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=~/magma-experimental/files" -u ubuntu --skip-tags buildMagma,pubMagma,helm -e "dirLocalInventory=~/magma-experimental/files"
-            ansible-playbook ami-init.yaml -e "dirLocalInventory=~/magma-experimental/files"
-#      - magma_slack_notify
+      - run: ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files"
+      - run: ansible-playbook devops-provision.yaml -e "dirLocalInventory=~/magma-experimental/files"
+      - run: ansible-playbook cloudstrapper-provision.yaml  -e "dirLocalInventory=~/magma-experimental/files"
+      - run: ansible-playbook devops-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "devops=tag_Name_ec2MagmaDevopsCloudstrapper" -e "dirInventory=~/magma-experimental/files" -u ubuntu --skip-tags buildMagma,pubMagma,helm -e "dirLocalInventory=~/magma-experimental/files"
+      - run: ansible-playbook ami-init.yaml -e "dirLocalInventory=~/magma-experimental/files"
+      - magma_slack_notify
 
   ## CWF OPERATOR
 
